# ChangeLog for media-libs/sdl-gfx
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/sdl-gfx/ChangeLog,v 1.51 2008/12/21 23:27:47 mr_bones_ Exp $

  21 Dec 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +files/sdl-gfx-2.0.18-gcc43.patch, +sdl-gfx-2.0.18.ebuild:
  version bump

*sdl-gfx-2.0.18 (21 Dec 2008)

  21 Dec 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +files/sdl-gfx-2.0.18-gcc43.patch, +sdl-gfx-2.0.18.ebuild:
  version bump

  16 Sep 2008; Jeroen Roovers <jer@gentoo.org> sdl-gfx-2.0.17.ebuild:
  Stable for HPPA (bug #236246).

  11 Sep 2008; Raúl Porcel <armin76@gentoo.org> sdl-gfx-2.0.17.ebuild:
  alpha/ia64/sparc stable wrt #236246

  06 Sep 2008; nixnut <nixnut@gentoo.org> sdl-gfx-2.0.17.ebuild:
  Stable on ppc wrt bug 236246

  31 Aug 2008; Markus Meier <maekke@gentoo.org> sdl-gfx-2.0.17.ebuild:
  amd64/x86 stable, bug #236246

*sdl-gfx-2.0.17 (06 Jun 2008)

  06 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +files/sdl-gfx-2.0.17-gcc43.patch, +sdl-gfx-2.0.17.ebuild:
  version bump

  20 May 2008; Raúl Porcel <armin76@gentoo.org> sdl-gfx-2.0.16.ebuild:
  ia64 stable wrt #221203

  17 May 2008; Tobias Klausmann <klausman@gentoo.org> sdl-gfx-2.0.16.ebuild:
  Stable on alpha, bug #221203

  16 May 2008; Ferris McCormick <fmccor@gentoo.org> sdl-gfx-2.0.16.ebuild:
  Sparc stable --- Bug #221203 --- lincity-ng still works using it.

  13 May 2008; Jeroen Roovers <jer@gentoo.org> sdl-gfx-2.0.16.ebuild:
  Stable for HPPA (bug #221203).

  11 May 2008; Markus Meier <maekke@gentoo.org> sdl-gfx-2.0.16.ebuild:
  amd64/x86 stable, bug #221203

  10 May 2008; nixnut <nixnut@gentoo.org> sdl-gfx-2.0.16.ebuild:
  Stable on ppc wrt bug 221203

  10 May 2008; Mike Frysinger <vapier@gentoo.org>
  +files/sdl-gfx-2.0.16-gcc43.patch, sdl-gfx-2.0.16.ebuild:
  Add fix from Debian for building with gcc-4.3 #219621 by Peter Alfredsen.
